--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.username=resourcemanagement
+spring.datasource.password=resourcemanagement
+spring.datasource.url=jdbc:postgresql://localhost:5432/resourcemanagement
+spring.datasource.driver-class-name=org.postgresql.Driver
 
