--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.password=resourcemanagement
 spring.datasource.url=jdbc:postgresql://localhost:5432/resourcemanagement
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=update
+logging.level.root=info
