--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/resourcemanagement
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 logging.level.root=info
