--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.username=resourcemanagement
 spring.datasource.password=resourcemanagement
 spring.datasource.url=jdbc:postgresql://localhost:5432/resourcemanagement
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.liquibase.change-log=classpath:/db/changelog/changelog.sql
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
