--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.liquibase.change-log=classpath:/db/changelog/changelog.sql
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 logging.level.root=info
