--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:3.1.0'
 	// https://mvnrepository.com/artifact/com.github.haifengl/smile-core
 	implementation 'com.github.haifengl:smile-core:2.6.0'
+	// https://mvnrepository.com/artifact/com.github.haifengl/smile-math
+	implementation 'com.github.haifengl:smile-math:2.6.0'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
