--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'com.github.haifengl:smile-math:2.6.0'
 	// https://mvnrepository.com/artifact/org.bytedeco/openblas-platform
 	implementation 'org.bytedeco:openblas-platform:0.3.19-1.5.7'
+	implementation 'com.auth0:java-jwt:3.19.1'
 
 
 	compileOnly 'org.projectlombok:lombok'
