--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.liquibase.change-log=classpath:/db/changelog/changelog.sql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.root=info
+
+auth.jwt.secret=Ha2e46D9jihF789S
