add task distribution

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,12 @@ dependencies {
 	implementation 'com.github.haifengl:smile-math:2.6.0'
 	// https://mvnrepository.com/artifact/org.bytedeco/openblas-platform
 	implementation 'org.bytedeco:openblas-platform:0.3.19-1.5.7'
-	implementation 'com.auth0:java-jwt:3.19.1'
+	implementation 'com.auth0:java-jwt:3.19.2'
+	// https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
+	implementation 'org.jgrapht:jgrapht-core:1.5.1'
+	// https://mvnrepository.com/artifact/com.google.guava/guava
+	implementation 'com.google.guava:guava:31.1-jre'
+
 
 
 	compileOnly 'org.projectlombok:lombok'
