--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/resourcemanagement
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.liquibase.change-log=classpath:/db/changelog/changelog.sql
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 logging.level.root=info
 
